@@ -1,5 +1,5 @@
 <Type Name="ScrolledWindow" FullName="Gtk.ScrolledWindow">
-  <TypeSignature Language="C#" Value="public class ScrolledWindow : Gtk.Bin, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class ScrolledWindow : Gtk.Bin, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Duncan Mak" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
