@@ -9,14 +9,14 @@
 // This code is inserted after the automatically generated code.
 //
 		
-public class Button : Gtk.Button {
-	private FileSelection file_sel;
+public class FSButton : Gtk.Button {
+	FileSelection file_sel;
 
-	public FileSelection FileSelection {
+	public  FileSelection FileSelection {
 		get { return file_sel; }
 	}
 
-	public Button (FileSelection fs, IntPtr raw) : base (raw) {
+	public FSButton (FileSelection fs, IntPtr raw) : base (raw) {
 		file_sel = fs;
 	}
 }
@@ -48,19 +48,19 @@ public Gtk.Label SelectionText {
 [DllImport("gtksharpglue")]
 static extern IntPtr gtksharp_file_selection_get_ok_button (IntPtr i);
 public Gtk.Button OkButton {
-	get { return new Button (this, gtksharp_file_selection_get_ok_button (this.Handle)); }
+	get { return new FSButton (this, gtksharp_file_selection_get_ok_button (this.Handle)); }
 }
 
 [DllImport("gtksharpglue")]
 static extern IntPtr gtksharp_file_selection_get_cancel_button (IntPtr i);
 public Gtk.Button CancelButton {
-	get { return new Button (this, gtksharp_file_selection_get_cancel_button (this.Handle)); }
+	get { return new FSButton (this, gtksharp_file_selection_get_cancel_button (this.Handle)); }
 }
 
 [DllImport("gtksharpglue")]
 static extern IntPtr gtksharp_file_selection_get_help_button (IntPtr i);
 public Gtk.Button HelpButton {
-	get { return new Button (this, gtksharp_file_selection_get_help_button (this.Handle)); }
+	get { return new FSButton (this, gtksharp_file_selection_get_help_button (this.Handle)); }
 }
 
 [DllImport("gtksharpglue")]
@@ -98,19 +98,19 @@ public string FileopFile {
 [DllImport("gtksharpglue")]
 static extern IntPtr gtksharp_file_selection_get_fileop_c_dir (IntPtr i);
 public Gtk.Button FileopCDir {
-	get { return new Button (this, gtksharp_file_selection_get_fileop_c_dir(this.Handle)); }
+	get { return new FSButton (this, gtksharp_file_selection_get_fileop_c_dir(this.Handle)); }
 }
 
 [DllImport("gtksharpglue")]
 static extern IntPtr gtksharp_file_selection_get_fileop_del_file (IntPtr i);
 public Gtk.Button FileopDelFile {
-	get { return new Button (this, gtksharp_file_selection_get_fileop_del_file (this.Handle)); }
+	get { return new FSButton (this, gtksharp_file_selection_get_fileop_del_file (this.Handle)); }
 }
 
 [DllImport("gtksharpglue")]
 static extern IntPtr gtksharp_file_selection_get_fileop_ren_file (IntPtr i);
 public Gtk.Button FileopRenFile {
-	get { return new Button (this, gtksharp_file_selection_get_fileop_ren_file (this.Handle)); }
+	get { return new FSButton (this, gtksharp_file_selection_get_fileop_ren_file (this.Handle)); }
 }
 
 [DllImport("gtksharpglue")]
