@@ -39,12 +39,11 @@ namespace WidgetViewer {
 
 		static void file_selection_ok (object o, EventArgs args)
 		{
-			Gtk.FileSelection.Button fsbutton = (Gtk.FileSelection.Button) o;
+			Gtk.FileSelection.FSButton fsbutton = (Gtk.FileSelection.FSButton) o;
 
 			Console.WriteLine ("ok button clicked!");
 
 			fsbutton.FileSelection.Destroy ();
-			
 		}
 
 		static void show_fileops (object o, EventArgs args)
