@@ -257,6 +257,7 @@
 <rule>
   <class name="GtkEditable">
     <method>GetSelectionBounds</method>
+    <method>GetLayoutOffsets</method>
   </class>
   <data>
     <attribute target="param">
