@@ -1,5 +1,7 @@
 2003-02-19  Duncan Mak  <duncan@ximian.com>
 
+	* TestFileSelection.cs: Update to reflect FileSelection changes.
+
 	* TestToolbar.cs: Change the method signature for the various
 	SignalFuncs. Thanks to Leoric from #mono for pointing it out.
 
