@@ -1,3 +1,10 @@
+2003-02-19  Duncan Mak  <duncan@ximian.com>
+
+	* sources/Gtk.metadata: Add GetLayoutOffsets to the rule for out params.
+
+	* gtk/FileSelection.custom (Button): Rename to FSButton, so that
+	we won't wipe out our original Gtk.Button docs.
+
 2003-02-19  Mike Kestner  <mkestner@speakeasy.net>
 
 	* generator/GenBase.cs : mark #line 1 for .customs
